# fantasybt

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  docker-compose.yml
.cache/clangd/index/: main.cpp.55B6B29143838039.idx
include/: arb_strat.hpp  player.hpp  roster.hpp  settings.hpp  state.hpp  strategy.hpp
src/: main.cpp  player.cpp  strategy.cpp
test/: test_player.cpp
